--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,6 @@
-flask==2.2.5
-werkzeug==2.2.3
-numpy==1.21.6
-pretty_midi==0.2.9
-gunicorn==20.1.0
-flask-cors==3.0.10
+flask
+note-seq
 tensorflow==2.11.0
-tensorflow-lite==2.11.0
-librosa==0.9.2
-soundfile==0.12.1
+ddsp
+librosa
+gin-config
