--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-flask==2.0.1
+flask==2.0.2
+werkzeug==2.0.2
 gunicorn==20.1.0
-note-seq==0.0.1
-torch>=1.10.0
-git+https://github.com/magenta/mt3.git
-librosa==0.8.1
-soundfile==0.10.3
+note-seq @ git+https://github.com/magenta/note-seq.git
+torch==1.12.1+cu113 --extra-index-url https://download.pytorch.org/whl/cu113
+mt3 @ git+https://github.com/magenta/mt3.git
+librosa==0.9.2
+soundfile==0.12.1
+numpy==1.21.6
