--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-flask==2.0.3
-werkzeug==2.0.3
-gunicorn==20.1.0
-note-seq==0.0.1
-torch==1.12.1
-git+https://github.com/magenta/mt3.git
-librosa==0.9.2
-soundfile==0.12.1
-numpy==1.21.6
+flask
+librosa
+note-seq
+tensorflow==2.11.0
+ddsp
+gin-config
+pyfluidsynth==1.3.0
+jax[cuda12] @ https://storage.googleapis.com/jax-releases/jax_cuda_releases.html
