--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-flask==2.2.5
+flask==2.0.3
 gunicorn==20.1.0
 numpy==1.21.6
-pretty_midi==0.2.9
-tensorflow==2.11.0
+librosa==0.8.1
 note-seq==0.0.3
-flask-cors==3.0.10
-librosa==0.9.2
+tensorflow==2.8.0
+jax[cpu]==0.3.15
+t5x==0.1.0
+gin-config==0.5.0
+google-cloud-storage==2.5.0
