--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ librosa==0.8.1
 note-seq==0.0.3
 tensorflow-cpu==2.8.0
 jax[cpu]==0.3.15
-t5x==0.1.0
+flax==0.5.1
 gin-config==0.5.0
 google-cloud-storage==2.5.0
 protobuf==3.20.3
