--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,9 @@ numpy==1.21.6
 librosa==0.8.1
 note-seq==0.0.3
 tensorflow-cpu==2.8.0
+jax[cpu]==0.3.15
+flax==0.5.1
 gin-config==0.5.0
 google-cloud-storage==2.5.0
 protobuf==3.20.3
+git+https://github.com/google-research/t5x.git@a03b78a
