--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,6 @@
 flask==2.1.3
 werkzeug==2.1.2
-gunicorn==20.1.0
-numpy==1.21.6
-librosa==0.8.1
-note-seq==0.0.3
-tensorflow-cpu==2.8.0
-flax==0.5.1
-gin-config==0.5.0
-google-cloud-storage==2.5.0
-protobuf==3.20.3
+tensorflow==2.11.0
+soundfile
+numpy
+pretty_midi
